# geminade

./: .gitignore  Cargo.toml  README.md  cfg.example.toml  logcfg.yml
src/: cfg.rs  main.rs
src/strats/: dca_dips.rs  dca_static.rs  mod.rs  order_util.rs  strat.rs  strat_util.rs
