[package]
name = "geminade"
version = "0.1.0"
edition = "2018"

[dependencies]
gemini-rust = { git = "https://github.com/neuronull/gemini-rust", branch = "main" }
serde = { version = "1.0.118", features = ["derive"] }
log = "0.4.11"
log4rs = "0.8.1"
chrono = "0.4.19"
config = "0.9"
ctrlc = "3.1.7"
chrono-tz = "0.5"
